[gd_scene load_steps=2 format=3 uid="uid://fahpglxxt0j"]

[ext_resource type="Script" path="res://scripts/Menu.gd" id="1_g0mo5"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_g0mo5")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="New Game" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "New Game"

[node name="Settings" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Settings"

[node name="Credits" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Credits
"

[node name="Back" type="Button" parent="VBoxContainer"]
visible = false
layout_mode = 2
text = "Back
"

[connection signal="pressed" from="VBoxContainer/New Game" to="." method="_on_new_game_pressed"]
[connection signal="pressed" from="VBoxContainer/Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="VBoxContainer/Credits" to="." method="_on_credits_pressed"]
[connection signal="pressed" from="VBoxContainer/Back" to="." method="_on_back_pressed"]
